overflow-x: hidden added to CSS to try fix site slide in mobile view

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
   background-color: #ececec;
   font-family: 'Roboto', sans-serif;
+  overflow-x:hidden;
 }
 
 header {
